--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link
-  rel="stylesheet"
-  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -40,9 +39,43 @@
                 </li>
             </ul>
             <img src="/img/Logo.svg" alt="Logo da Alura Books">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-End</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Design & UX</a>
+                </li>
+            </ul>
+
+            <li class="opcoes__item">
+                <a href="#" class="opcoes__link">Favoritos</a>
+            </li>
+            <li class="opcoes__item">
+                <a href="#" class="opcoes__link">Minha Estante</a>
+            </li>
+        </ul>
+
         <div class="container">
-            <a href="#"><img src="/img/Favoritos.svg" alt="meus favoritos" class="container__imagem"></a>
+            <a href="#"><img src="/img/Favoritos.svg" alt="meus favoritos" class="container__imagem container__imagem-transparente"></a>
             <a href="#"><img src="/img/Compras.svg" alt="carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="/img/Usuário.svg" alt="meu perfil" class="container__imagem"></a>
         </div>
@@ -179,8 +212,10 @@
     </section>
 
     <section class="contato">
-        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <div class="contato__descricao">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
         <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
 
@@ -188,6 +223,64 @@
 
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação</li>
+                <li class="lista-rodape__item">
+                    <img src="/img/Caelum.svg" alt="logo da caelum"><a href="#" class="lista-rodape__link">Caelum</a></li>
+                <li class="lista-rodape__item">
+                    <img src="/img/CasaDoCodigo.svg" alt="logo da casa do código"><a href="#" class="lista-rodape__link">Casa do Código</a>
+                </li>
+        </ul>        
+            
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação Online</li>
+                <li class="lista-rodape__item">
+                    <img src="/img/Alura.svg" alt="logo da alura"><a href="#" class="lista-rodape__link">Alura</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/AluraEmpresas.svg" alt="logo alura empresas"><a href="#" class="lista-rodape__link">Alura Para Empresas</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/AluraLatam.svg" alt="logo alura latam"><a href="#" class="lista-rodape__link">Alura LATAM</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/AluraStart.svg" alt="logo da alura start"><a href="#" class="lista-rodape__link">Alura Start</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/MusicDot.svg" alt="logo da MusicDot"><a href="#" class="lista-rodape__link">MusicDot</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/AluraLingua.svg" alt="logo da alura lingua"><a href="#" class="lista-rodape__link">Alura Língua</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/PM3.svg" alt="logo da PM3"><a href="#" class="lista-rodape__link">PM3</a></li>
+        </ul>            
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+                <li class="lista-rodape__item">
+                    <img src="/img/HipstersTech.svg" alt="logo do HipstersTech"><a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/Scuba.svg" alt="logo scuba dev"><a href="#" class="lista-rodape__link">Scuba Dev</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/Layers.svg" alt="logo layers tech"><a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/LikeABoss.svg" alt="logo like a boss"><a href="#" class="lista-rodape__link">Like a Boss</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/CarreiraSemFronteira.svg" alt="logo carreiras sem fronteira"><a href="#" class="lista-rodape__link">Carreiras sem Fronteira</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/HipstersJobs.svg" alt="logo Hipsters ponto Jobs"><a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/img/GUJ.svg" alt="logo da GUJ"><a href="#" class="lista-rodape__link">GUJ</a>
+                </li>    
+        </ul>
     </footer>
 
     
