--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Books</title>
-    <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="./reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -38,7 +38,7 @@
                     <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
-            <img src="/img/Logo.svg" alt="Logo da Alura Books">
+            <img src="./img/Logo.svg" alt="Logo da Alura Books">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
@@ -76,14 +76,14 @@
 
         <div class="container">
             <a href="#">
-                <img src="/img/Favoritos.svg" alt="meus favoritos" class="container__imagem container__imagem-transparente">
+                <img src="./img/Favoritos.svg" alt="meus favoritos" class="container__imagem container__imagem-transparente">
             </a>
             <a href="#" class="container__link">
-                <img src="/img/Compras.svg" alt="carrinho de compras" class="container__imagem">
+                <img src="./img/Compras.svg" alt="carrinho de compras" class="container__imagem">
                 <p class="container__texto">Minha Sacola</p>
             </a>
             <a href="#" class="container__link">
-                <img src="/img/Usuário.svg" alt="meu perfil" class="container__imagem">
+                <img src="./img/Usuário.svg" alt="meu perfil" class="container__imagem">
                 <p class="container__texto">Meu perfil</p>
             </a>
         </div>
@@ -105,12 +105,12 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="/img/ApacheKafka.svg" alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Liderança.svg" alt="Livro sobre Liderança em Design da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Javascript.svg" alt="Livro sobre Javascript da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Guia Front-end.svg" alt="Livro sobre Guia Front-End da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/UX.svg" alt="Livro sobre UX Estratégico da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro sobre Liderança em Design da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro sobre Javascript da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro sobre Guia Front-End da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/UX.svg" alt="Livro sobre UX Estratégico da Alura Books"></div>
                 </div>
             
                 <!-- If we need navigation buttons -->
@@ -128,14 +128,14 @@
                         <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                     </div>
                     <!-- 2 Coluna-->
-                    <img src="/img/Angular.svg" alt="Logo do Angular" class="descricao__imagem">
+                    <img src="./img/Angular.svg" alt="Logo do Angular" class="descricao__imagem">
                 </div>
                 <!-- 2 Linha-->
                 <div class="card__botoes">
                     <!-- 1 Coluna -->
                     <ul class="botoes">
-                        <li class="botoes__item"><img src="/img/Favoritos.svg" alt="Favoritar livro"></li>
-                        <li class="botoes__item"><img src="/img/Compras.svg" alt="Adicionar no carrinho de compras "></li>
+                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras "></li>
                     </ul>
                     <!-- 2 Coluna-->
                     <a href="#" class="botoes__ancora">Saiba mais</a>
@@ -154,11 +154,11 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="/img/UX.svg" alt="Livro sobre UX Estratégico da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Liderança.svg" alt="Livro sobre Liderança em Design da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Javascript.svg" alt="Livro sobre Javascript da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Guia Front-end.svg" alt="Livro sobre Guia Front-End da Alura Books"></div>
-                <div class="swiper-slide"><img src="/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/UX.svg" alt="Livro sobre UX Estratégico da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro sobre Liderança em Design da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro sobre Javascript da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro sobre Guia Front-End da Alura Books"></div>
+                <div class="swiper-slide"><img src="./img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da Alura Books"></div>
                 </div>
             
                 <!-- If we need navigation buttons -->
@@ -171,20 +171,20 @@
                 <div class="card__descricao">
                     <!-- 1 Coluna -->
                     <div class="descricao">
-                        <img src="/img/Estrelinhas.svg" alt="avaliação cinco estrelas" class="descricao__estrelas">
+                        <img src="./img/Estrelinhas.svg" alt="avaliação cinco estrelas" class="descricao__estrelas">
                         <h3 class="descricao__titulo">Autora do mês</h3>
                             <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
                         <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
                     </div>
                     <!-- 2 Coluna-->
-                    <img src="/img/Perfil-escritora.svg" alt="Foto da escritora Juliana Agarikov" class="descricao__imagem">
+                    <img src="./img/Perfil-escritora.svg" alt="Foto da escritora Juliana Agarikov" class="descricao__imagem">
                 </div>
                 <!-- 2 Linha-->
                 <div class="card__botoes">
                     <!-- 1 Coluna -->
                     <ul class="botoes">
-                        <li class="botoes__item"><img src="/img/Favoritos.svg" alt="Favoritar livro"></li>
-                        <li class="botoes__item"><img src="/img/Compras.svg" alt="Adicionar no carrinho de compras "></li>
+                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras "></li>
                     </ul>
                     <!-- 2 Coluna-->
                     <a href="#" class="botoes__ancora">Saiba mais</a>
@@ -248,49 +248,49 @@
         <ul class="lista-rodape">
             <li class="lista-rodape__titulo">Educação Online</li>
                 <li class="lista-rodape__item">
-                    <img src="/img/Alura.svg" alt="logo da alura"><a href="#" class="lista-rodape__link">Alura</a>
+                    <img src="./img/Alura.svg" alt="logo da alura"><a href="#" class="lista-rodape__link">Alura</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/AluraEmpresas.svg" alt="logo alura empresas"><a href="#" class="lista-rodape__link">Alura Para Empresas</a>
+                    <img src="./img/AluraEmpresas.svg" alt="logo alura empresas"><a href="#" class="lista-rodape__link">Alura Para Empresas</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/AluraLatam.svg" alt="logo alura latam"><a href="#" class="lista-rodape__link">Alura LATAM</a>
+                    <img src="./img/AluraLatam.svg" alt="logo alura latam"><a href="#" class="lista-rodape__link">Alura LATAM</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/AluraStart.svg" alt="logo da alura start"><a href="#" class="lista-rodape__link">Alura Start</a>
+                    <img src="./img/AluraStart.svg" alt="logo da alura start"><a href="#" class="lista-rodape__link">Alura Start</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/MusicDot.svg" alt="logo da MusicDot"><a href="#" class="lista-rodape__link">MusicDot</a>
+                    <img src="./img/MusicDot.svg" alt="logo da MusicDot"><a href="#" class="lista-rodape__link">MusicDot</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/AluraLingua.svg" alt="logo da alura lingua"><a href="#" class="lista-rodape__link">Alura Língua</a>
+                    <img src="./img/AluraLingua.svg" alt="logo da alura lingua"><a href="#" class="lista-rodape__link">Alura Língua</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/PM3.svg" alt="logo da PM3"><a href="#" class="lista-rodape__link">PM3</a></li>
+                    <img src="./img/PM3.svg" alt="logo da PM3"><a href="#" class="lista-rodape__link">PM3</a></li>
         </ul>            
 
         <ul class="lista-rodape">
             <li class="lista-rodape__titulo">Comunidade</li>
                 <li class="lista-rodape__item">
-                    <img src="/img/HipstersTech.svg" alt="logo do HipstersTech"><a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
+                    <img src="./img/HipstersTech.svg" alt="logo do HipstersTech"><a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/Scuba.svg" alt="logo scuba dev"><a href="#" class="lista-rodape__link">Scuba Dev</a>
+                    <img src="./img/Scuba.svg" alt="logo scuba dev"><a href="#" class="lista-rodape__link">Scuba Dev</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/Layers.svg" alt="logo layers tech"><a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+                    <img src="./img/Layers.svg" alt="logo layers tech"><a href="#" class="lista-rodape__link">Layers ponto Tech</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/LikeABoss.svg" alt="logo like a boss"><a href="#" class="lista-rodape__link">Like a Boss</a>
+                    <img src="./img/LikeABoss.svg" alt="logo like a boss"><a href="#" class="lista-rodape__link">Like a Boss</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/CarreiraSemFronteira.svg" alt="logo carreiras sem fronteira"><a href="#" class="lista-rodape__link">Carreiras sem Fronteira</a>
+                    <img src="./img/CarreiraSemFronteira.svg" alt="logo carreiras sem fronteira"><a href="#" class="lista-rodape__link">Carreiras sem Fronteira</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/HipstersJobs.svg" alt="logo Hipsters ponto Jobs"><a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
+                    <img src="./img/HipstersJobs.svg" alt="logo Hipsters ponto Jobs"><a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
                 </li>
                 <li class="lista-rodape__item">
-                    <img src="/img/GUJ.svg" alt="logo da GUJ"><a href="#" class="lista-rodape__link">GUJ</a>
+                    <img src="./img/GUJ.svg" alt="logo da GUJ"><a href="#" class="lista-rodape__link">GUJ</a>
                 </li>    
         </ul>
     </footer>
