--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
         <ul class="lista-rodape">
             <li class="lista-rodape__titulo">Educação</li>
                 <li class="lista-rodape__item">
-                    <img src="/img/Caelum.svg" alt="logo da caelum"><a href="#" class="lista-rodape__link">Caelum</a></li>
+                    <img src="./img/Caelum.svg" alt="logo da caelum"><a href="#" class="lista-rodape__link">Caelum</a></li>
                 <li class="lista-rodape__item">
-                    <img src="/img/CasaDoCodigo.svg" alt="logo da casa do código"><a href="#" class="lista-rodape__link">Casa do Código</a>
+                    <img src="./img/CasaDoCodigo.svg" alt="logo da casa do código"><a href="#" class="lista-rodape__link">Casa do Código</a>
                 </li>
         </ul>        
             
