--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 </li>
             </ul>
             <img src="./img/Logo.svg" alt="Logo da Alura Books">
-            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+            <h1 class="container__titulo"><b
+                class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
         <ul class="opcoes">
@@ -76,14 +77,14 @@
 
         <div class="container">
             <a href="#">
-                <img src="./img/Favoritos.svg" alt="meus favoritos" class="container__imagem container__imagem-transparente">
+                <img src="./img/Favoritos.png" alt="meus favoritos" class="container__imagem container__imagem-transparente">
             </a>
             <a href="#" class="container__link">
-                <img src="./img/Compras.svg" alt="carrinho de compras" class="container__imagem">
+                <img src="./img/compras.png" alt="carrinho de compras" class="container__imagem">
                 <p class="container__texto">Minha Sacola</p>
             </a>
             <a href="#" class="container__link">
-                <img src="./img/Usuário.svg" alt="meu perfil" class="container__imagem">
+                <img src="./img/Usuário.png" alt="meu perfil" class="container__imagem">
                 <p class="container__texto">Meu perfil</p>
             </a>
         </div>
@@ -134,8 +135,8 @@
                 <div class="card__botoes">
                     <!-- 1 Coluna -->
                     <ul class="botoes">
-                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"></li>
-                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras "></li>
+                        <li class="botoes__item"><img src="./img/Favoritos.png" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="./img/compras.png" alt="Adicionar no carrinho de compras "></li>
                     </ul>
                     <!-- 2 Coluna-->
                     <a href="#" class="botoes__ancora">Saiba mais</a>
@@ -183,8 +184,8 @@
                 <div class="card__botoes">
                     <!-- 1 Coluna -->
                     <ul class="botoes">
-                        <li class="botoes__item"><img src="./img/Favoritos.svg" alt="Favoritar livro"></li>
-                        <li class="botoes__item"><img src="./img/Compras.svg" alt="Adicionar no carrinho de compras "></li>
+                        <li class="botoes__item"><img src="./img/Favoritos.png" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="./img/compras.png" alt="Adicionar no carrinho de compras "></li>
                     </ul>
                     <!-- 2 Coluna-->
                     <a href="#" class="botoes__ancora">Saiba mais</a>
